--- a/App/FEKC/app/src/main/res/layout/activity_facebook_login.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_facebook_login.xml
@@ -18,4 +18,13 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:layout_above="@+id/faceebook_login_activity_login_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="71dp"
+        android:src="@drawable/FEKC-LOGO" />
+
 </RelativeLayout>
