--- a/App/FEKC/app/src/main/res/layout/activity_app_list.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_app_list.xml
@@ -27,6 +27,16 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_search_black_48dp" />
 
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:id="@+id/button"
+            android:onClick="onSave"
+            android:layout_alignTop="@+id/app_list_activity_recycler_view"
+            android:layout_alignParentEnd="true" />
+
     </LinearLayout>
 
     <view
