--- a/App/FEKC/app/src/main/res/layout/activity_time_based_task.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_time_based_task.xml
@@ -21,7 +21,8 @@
         android:hint="Task Name"
 
         android:layout_below="@+id/tasknameview"
-        />
+        android:layout_alignEnd="@+id/date"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -83,10 +84,10 @@
         android:layout_height="wrap_content"
         android:text="Set Duration"
         android:id="@+id/set_duration"
-        android:layout_below="@+id/add_apps"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="43dp"
 
-        />
+        android:layout_below="@+id/add_apps"
+        android:layout_alignParentStart="true" />
 
 
     <EditText
