--- a/App/FEKC/app/src/main/res/layout/app_bar_nav.xml
+++ b/App/FEKC/app/src/main/res/layout/app_bar_nav.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_circle_black_48dp" />
+        android:tint="@color/colorWhite"
+        android:src="@drawable/ic_add" />
 
 </android.support.design.widget.CoordinatorLayout>
