--- a/App/FEKC/app/src/main/res/layout/activity_time_based_task.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_time_based_task.xml
@@ -1,3 +1,4 @@
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -5,6 +6,51 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.shiv.fekc.activity.TimeBasedTaskActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/task_descr_duration">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Duration Based Task"
+            android:id="@+id/activity_type_description" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/activity_type_description">
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:id="@+id/activity_type_logo"
+                android:src="@drawable/ic_hourglass_empty"
+                android:tint="#222"
+                android:layout_alignParentLeft="true" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/activity_type_logo"
+                android:paddingTop="5dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
+                    android:id="@+id/activity_descr_title"
+                    android:text="Allow App Usage for a few hours." />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="11dp"
+                    android:text="eg. Allow Youtube usage for at most\n 3 hours everyday for a Week"
+                    android:id="@+id/activity_descr_example"
+                    android:layout_below="@id/activity_descr_title"
+                    android:paddingTop="5dp"/>
+            </RelativeLayout>
+        </RelativeLayout>
+    </RelativeLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -123,23 +169,6 @@
         android:layout_alignParentBottom="true"
         android:onClick="onSave"
         android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_type_logo"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/ic_hourglass_empty_black_48dp"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Duration Based Tasks"
-        android:id="@+id/activity_type_description"
-        android:layout_alignBottom="@+id/activity_type_logo"
-        android:layout_toEndOf="@+id/activity_type_logo" />
 
     <TimePicker
         android:layout_width="wrap_content"
