--- a/App/FEKC/app/src/main/res/layout/custom_toolbar.xml
+++ b/App/FEKC/app/src/main/res/layout/custom_toolbar.xml
@@ -5,15 +5,12 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar_bar_circular_image_view"
-        android:layout_width="@dimen/list_view_image_width"
-        android:layout_height="@dimen/list_view_image_height"
+    <ImageView
+        android:id="@+id/custom_toolbar_home"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginRight="@dimen/toolbar_horizontal_margin"
-        app:civ_border_color="#11000000"
-        app:civ_border_width="2dp"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_home" />
 
 </RelativeLayout>
