--- a/App/FEKC/app/src/main/res/layout/add_task_nav.xml
+++ b/App/FEKC/app/src/main/res/layout/add_task_nav.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/app_bar_nav_toolbar"
+            android:id="@+id/add_task_nav_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorAccent"
