--- a/App/FEKC/app/src/main/res/layout/task_time_based.xml
+++ b/App/FEKC/app/src/main/res/layout/task_time_based.xml
@@ -11,23 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/timeTaskNav">
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/app_bar_nav_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorAccent"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
-
-                <include layout="@layout/add_task_nav_header" />
-
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.AppBarLayout>
+        <include layout="@layout/add_task_nav" />
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
