--- a/App/FEKC/app/src/main/res/layout/app_bar_nav.xml
+++ b/App/FEKC/app/src/main/res/layout/app_bar_nav.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/app_bar_nav_toolbar"
+            android:id="@+id/app_bar_nav_home_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
