--- a/App/FEKC/app/src/main/res/layout/nav_header_nav.xml
+++ b/App/FEKC/app/src/main/res/layout/nav_header_nav.xml
@@ -23,6 +23,7 @@
         android:layout_alignParentRight="true"/>
 
     <TextView
+        android:id="@+id/nav_header_name_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
