--- a/App/FEKC/app/src/main/res/layout/activity_time_based_task.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_time_based_task.xml
@@ -20,7 +20,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/activity_type_description">
+            android:layout_below="@id/activity_type_description"
+            android:paddingTop="5dp">
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
@@ -51,155 +52,183 @@
         </RelativeLayout>
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Task Name"
-        android:id="@+id/tasknameview"
-        android:layout_alignParentTop="true"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:layout_below="@id/task_descr_duration"
+        android:id="@+id/TaskName_TimeBased">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Task Name"
+            android:id="@+id/tasknameview"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:textSize="16dp"
+            android:textColor="#222"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/taskname"
+            android:hint="Task Name"
+            android:textSize="13dp"
+            android:layout_below="@+id/tasknameview" />
 
-        android:layout_marginTop="100dp" />
+    </RelativeLayout>
 
-    <EditText
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/taskname"
-        android:hint="Task Name"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:layout_below="@id/TaskName_TimeBased"
+        android:id="@+id/EndDate_TimeBased">
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="End Date"
+            android:id="@+id/endDateView"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:textSize="16dp"
+            android:textColor="#222"
+            android:paddingBottom="4dp"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/changeDate"
+            android:src="@drawable/ic_date_range"
+            android:onClick="setDate"
+            android:layout_toEndOf="@id/endDateView"
+            android:layout_alignBottom="@id/endDateView"
+            android:layout_marginLeft= "10dp"
+            android:paddingBottom="4dp"
+            />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            android:ems="10"
+            android:id="@+id/date"
+            android:layout_alignBottom="@id/changeDate"
+            android:layout_toRightOf="@id/changeDate"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:textSize="13dp"
+            android:textAlignment="center"/>
 
-        android:layout_below="@+id/tasknameview"
-        android:layout_alignEnd="@+id/date"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="End Date"
-        android:id="@+id/enddateview"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/taskname"
-        />
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:layout_below="@id/EndDate_TimeBased"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:id="@+id/apps_and_friends_TimeBased">
+        
+        <RelativeLayout
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/appBlock_TimeBased">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Apps"
+                android:id="@+id/addApps_TimeBased"
+                android:layout_alignParentTop="true"
+                android:textSize="16dp"
+                android:textColor="#222"
+                android:layout_marginTop="15dp"
+                android:paddingBottom="4dp"
+                android:paddingRight="20dp"/>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/add_apps_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:tint="@color/colorWhite"
+                android:src="@drawable/ic_add_24"
+                android:layout_toRightOf="@id/addApps_TimeBased"
+                android:onClick="addAppsButton"
+                android:scaleType="center"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/appBlock_TimeBased">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Friends"
+                android:id="@+id/addFriends_TimeBased"
+                android:layout_alignParentTop="true"
+                android:textSize="16dp"
+                android:textColor="#222"
+                android:layout_marginTop="15dp"
+                android:paddingBottom="4dp"
+                android:paddingRight="20dp"/>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/activity_schedule_based_task_add_friends_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:tint="@color/colorWhite"
+                android:src="@drawable/ic_add_24"
+                android:layout_toRightOf="@id/addFriends_TimeBased"
+                android:onClick="addFriendsButton"
+                android:scaleType="center"/>
+        </RelativeLayout>
 
+    </RelativeLayout>
 
-
-
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Apps"
-        android:id="@+id/add_apps"
-        android:layout_below="@+id/enddateview"
-        android:layout_marginTop="50dp"
+        android:layout_below="@id/apps_and_friends_TimeBased">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Set Duration"
+            android:id="@+id/set_duration"
+            android:layout_marginTop="43dp"
 
-        />
+            android:layout_below="@+id/add_apps"
+            android:layout_alignParentStart="true" />
+        <TimePicker
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timePicker"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="375dp"
+            android:layout_marginBottom="77dp" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Apps"
-        android:id="@+id/add_apps_button"
-        android:onClick="addAppsButton"
-        android:layout_toRightOf="@+id/add_apps"
-        android:layout_alignBottom="@+id/add_apps"
-        android:layout_marginLeft="10dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Friends"
-        android:id="@+id/add_friends"
-        android:layout_alignBottom="@+id/add_apps_button"
-        android:layout_toRightOf="@+id/add_apps_button"
-        android:layout_marginLeft="20dp"
-        />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Friends"
-        android:id="@+id/activity_schedule_based_task_add_friends_button"
-        android:onClick="addFriendsButton"
-        android:layout_alignBottom="@+id/add_friends"
-        android:layout_toRightOf="@+id/add_friends"
-        android:layout_marginLeft="10dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Set Duration"
-        android:id="@+id/set_duration"
-        android:layout_marginTop="43dp"
-
-        android:layout_below="@+id/add_apps"
-        android:layout_alignParentStart="true" />
-
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/date"
-        android:layout_alignBottom="@+id/changeDate"
-        android:layout_toRightOf="@+id/changeDate"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false" />
-
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/changeDate"
-        android:src="@drawable/ic_date_range_black_48dp"
-        android:onClick="setDate"
-        android:layout_toEndOf="@+id/enddateview"
-        android:layout_alignBottom="@+id/enddateview"
-        android:layout_marginLeft= "10dp"
-        />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/save"
-        android:src="@drawable/ic_check_circle_black_48dp"
-        android:layout_alignParentBottom="true"
-        android:onClick="onSave"
-        android:layout_centerHorizontal="true" />
-
-    <TimePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timePicker"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="375dp"
-        android:layout_marginBottom="77dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="time"
-        android:ems="10"
-        android:id="@+id/duration"
-        android:layout_alignBottom="@+id/set_duration"
-        android:layout_toEndOf="@+id/set_duration_button"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false" />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/set_duration_button"
-        android:onClick="setDuration"
-        android:src="@drawable/ic_alarm_add_black_48dp"
-        android:layout_alignBottom="@+id/set_duration"
-        android:layout_toEndOf="@+id/set_duration"
-        android:layout_marginLeft="10dp"
-        />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="time"
+            android:ems="10"
+            android:id="@+id/duration"
+            android:layout_alignBottom="@+id/set_duration"
+            android:layout_toEndOf="@+id/set_duration_button"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/set_duration_button"
+            android:onClick="setDuration"
+            android:src="@drawable/ic_alarm_add_black_48dp"
+            android:layout_alignBottom="@+id/set_duration"
+            android:layout_toEndOf="@+id/set_duration"
+            android:layout_marginLeft="10dp"
+            />
+    </RelativeLayout>
 
 </RelativeLayout>
