--- a/App/FEKC/app/src/main/res/layout/nav_header_nav.xml
+++ b/App/FEKC/app/src/main/res/layout/nav_header_nav.xml
@@ -15,6 +15,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/nav_header_nav_circular_image_view"
+        android:layout_marginTop="20dp"
         android:layout_width="@dimen/list_view_image_width"
         android:layout_height="@dimen/list_view_image_height"
         android:layout_marginRight="@dimen/toolbar_horizontal_margin"
