--- a/App/FEKC/app/src/main/res/layout/activity_add_task.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_add_task.xml
@@ -1,40 +1,181 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="com.example.shiv.fekc.activity.AddTaskActivity">
-
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Time Based Task"
-        android:id="@+id/timebased"
-        android:layout_marginTop="93dp"
-        android:layout_alignParentTop="true"
-        android:onClick="timeTask"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/task_sel_head">
+        <include layout="@layout/task_selection_nav"></include>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@id/task_sel_head">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/timebased"
+            android:onClick="timeTask"
+            android:layout_weight="1"
+            android:background="@drawable/layout_border">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/task_descr_duration"
+                android:paddingTop="30dp"
+                android:paddingLeft="20dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Duration Based Task"
+                    android:id="@+id/activity_type_description" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/activity_type_description"
+                    android:paddingTop="5dp">
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:id="@+id/activity_type_logo"
+                        android:src="@drawable/ic_hourglass_empty"
+                        android:tint="#222"
+                        android:layout_alignParentLeft="true" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/activity_type_logo"
+                        android:paddingTop="5dp">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="15dp"
+                            android:id="@+id/activity_descr_title"
+                            android:text="Allow App Usage for a few hours." />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="11dp"
+                            android:text="eg. Allow Youtube usage for at most\n 3 hours everyday for a Week"
+                            android:id="@+id/activity_descr_example"
+                            android:layout_below="@id/activity_descr_title"
+                            android:paddingTop="5dp"/>
+                    </RelativeLayout>
+                </RelativeLayout>
+            </RelativeLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Schedule Based Task"
-        android:onClick="scheduleTask"
-        android:id="@+id/schedulebased"
-        android:layout_marginTop="47dp"
-        android:layout_below="@+id/activitybased"
-        android:layout_centerHorizontal="true" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/schedulebased"
+            android:layout_weight="1"
+            android:onClick="scheduleTask"
+            android:background="@drawable/layout_border">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/task_descr_schedule"
+                android:paddingTop="30dp"
+                android:paddingLeft="20dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Schedule Based Task"
+                    android:id="@+id/activity_type_schedule" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/activity_type_schedule"
+                    android:paddingTop="5dp">
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:id="@+id/activity_type_logo_schedule"
+                        android:src="@drawable/ic_date_range"
+                        android:tint="#222"
+                        android:layout_alignParentLeft="true" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/activity_type_logo_schedule"
+                        android:paddingTop="5dp">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="15dp"
+                            android:id="@+id/activity_descr_title_schedule"
+                            android:text="Prevent app usage during a\nschedule." />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="11dp"
+                            android:text="eg. Prevent Snapchat from 9:00am to\n9:00pm from Monday to Friday for a Month"
+                            android:id="@+id/activity_descr_example_schedule"
+                            android:layout_below="@id/activity_descr_title_schedule"
+                            android:paddingTop="5dp"/>
+                    </RelativeLayout>
+                </RelativeLayout>
+            </RelativeLayout>
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Activity Based Task"
-        android:id="@+id/activitybased"
-        android:onClick="activityTask"
-        android:layout_below="@+id/timebased"
-        android:layout_alignEnd="@+id/schedulebased"
-        android:layout_marginTop="54dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/activitybased"
+            android:layout_weight="1"
+            android:onClick="activityTask">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/task_descr_activity"
+                android:paddingTop="30dp"
+                android:paddingLeft="20dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Activity Based Task"
+                    android:id="@+id/activity_type_activity" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/activity_type_activity"
+                    android:paddingTop="5dp">
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:id="@+id/activity_type_logo_activity"
+                        android:src="@drawable/ic_phone_android"
+                        android:tint="#222"
+                        android:layout_alignParentLeft="true" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/activity_type_logo_activity"
+                        android:paddingTop="5dp">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="15dp"
+                            android:id="@+id/activity_descr_title_activity"
+                            android:text="Prevent app usage during a\npredefined activity" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="11dp"
+                            android:text="eg. Prevent messaging while driving\neveryday, for a Year"
+                            android:id="@+id/activity_descr_example_activity"
+                            android:layout_below="@id/activity_descr_title_activity"
+                            android:paddingTop="5dp"/>
+                    </RelativeLayout>
+                </RelativeLayout>
+            </RelativeLayout>
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
