--- a/App/FEKC/app/src/main/res/layout/fragment_stats.xml
+++ b/App/FEKC/app/src/main/res/layout/fragment_stats.xml
@@ -8,6 +8,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="YOLO"
+        android:textSize="40dp"
+        android:layout_marginLeft="120dp"/>
 
 </FrameLayout>
