--- a/App/FEKC/app/src/main/res/layout/activity_schedule_based_task.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_schedule_based_task.xml
@@ -5,191 +5,273 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.shiv.fekc.activity.ScheduleBasedTaskActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Task Name"
-        android:id="@+id/tasknameview"
-        android:layout_alignParentTop="true"
+        android:id="@+id/task_descr_schedule">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Schedule Based Task"
+            android:id="@+id/activity_type_schedule" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/activity_type_schedule"
+            android:paddingTop="5dp">
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:id="@+id/activity_type_logo_schedule"
+                android:src="@drawable/ic_date_range"
+                android:tint="#222"
+                android:layout_alignParentLeft="true" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/activity_type_logo_schedule"
+                android:paddingTop="5dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
+                    android:id="@+id/activity_descr_title_schedule"
+                    android:text="Prevent app usage during a\nschedule." />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="11dp"
+                    android:text="eg. Prevent Snapchat from 9:00am to\n9:00pm from Monday to Friday for a Month"
+                    android:id="@+id/activity_descr_example_schedule"
+                    android:layout_below="@id/activity_descr_title_schedule"
+                    android:paddingTop="5dp"/>
+            </RelativeLayout>
+        </RelativeLayout>
+    </RelativeLayout>
 
-        android:layout_marginTop="100dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/taskname"
-        android:hint="Task Name"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_below="@id/task_descr_schedule"
+        android:id="@+id/TaskName_ScheduleBased">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Task Name"
+            android:id="@+id/tasknameview_schedule"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:textSize="16dp"
+            android:textColor="#222"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/schedule_taskname"
+            android:hint="Task Name"
+            android:textSize="13dp"
+            android:layout_below="@+id/tasknameview_schedule" />
 
-        android:layout_below="@+id/tasknameview"
-         />
+    </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="End Date"
-        android:id="@+id/enddateview"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/taskname"
-        />
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_below="@id/TaskName_ScheduleBased"
+        android:id="@+id/EndDate_ScheduleBased">
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="End Date"
+            android:id="@+id/endDateView_schedule"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:textSize="16dp"
+            android:textColor="#222"
+            android:paddingBottom="4dp"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/changeDate_schedule"
+            android:src="@drawable/ic_date_range"
+            android:onClick="setDate"
+            android:layout_toEndOf="@id/endDateView_schedule"
+            android:layout_alignBottom="@id/endDateView_schedule"
+            android:layout_marginLeft= "10dp"
+            android:paddingBottom="4dp"
+            />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            android:ems="10"
+            android:id="@+id/duration_date_schedule"
+            android:layout_alignBottom="@id/changeDate_schedule"
+            android:layout_toRightOf="@id/changeDate_schedule"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:textSize="13dp"
+            android:textAlignment="center"/>
 
+    </RelativeLayout>
 
-
-
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Apps"
-        android:id="@+id/add_apps"
-        android:layout_below="@+id/enddateview"
-        android:layout_marginTop="50dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_below="@id/EndDate_ScheduleBased"
+        android:paddingTop="30dp"
+        android:paddingBottom="10dp"
+        android:id="@+id/apps_and_friends_ScheduleBased">
 
-       />
+        <RelativeLayout
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/appBlock_ScheduleBased"
+            android:paddingLeft="20dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Apps"
+                android:id="@+id/addApps_ScheduleBased"
+                android:layout_alignParentTop="true"
+                android:textSize="16dp"
+                android:textColor="#222"
+                android:layout_marginTop="15dp"
+                android:paddingBottom="4dp"
+                android:paddingRight="20dp"/>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/add_apps_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:tint="@color/colorWhite"
+                android:src="@drawable/ic_add_24"
+                android:layout_toRightOf="@id/addApps_ScheduleBased"
+                android:onClick="addAppsButton"
+                android:scaleType="center"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/appBlock_ScheduleBased"
+            android:paddingLeft="20dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Friends"
+                android:id="@+id/addFriends_ScheduleBased"
+                android:layout_alignParentTop="true"
+                android:textSize="16dp"
+                android:textColor="#222"
+                android:layout_marginTop="15dp"
+                android:paddingBottom="4dp"
+                android:paddingRight="20dp"/>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/activity_schedule_based_task_add_friends_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:tint="@color/colorWhite"
+                android:src="@drawable/ic_add_24"
+                android:layout_toRightOf="@id/addFriends_ScheduleBased"
+                android:onClick="addFriendsButton"
+                android:scaleType="center"/>
+        </RelativeLayout>
+    </RelativeLayout>
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Apps"
-        android:id="@+id/add_apps_button"
-        android:onClick="addAppsButton"
-        android:layout_toRightOf="@+id/add_apps"
-        android:layout_alignBottom="@+id/add_apps"
-        android:layout_marginLeft="10dp"
-         />
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_below="@id/apps_and_friends_ScheduleBased"
+        android:id="@+id/StartTime_ScheduleBased">
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Start Time"
+            android:id="@+id/StartTimeView_schedule"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:textSize="16dp"
+            android:textColor="#222"
+            android:paddingBottom="4dp"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/start_button_Schedule"
+            android:src="@drawable/ic_alarm_add_black_48dp"
+            android:onClick="setStartTime"
+            android:layout_toEndOf="@id/StartTimeView_schedule"
+            android:layout_alignBottom="@id/StartTimeView_schedule"
+            android:layout_marginLeft= "10dp"
+            android:paddingBottom="4dp"
+            />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            android:ems="10"
+            android:id="@+id/start_time_edit_text_Schedule"
+            android:layout_alignBottom="@id/start_button_Schedule"
+            android:layout_toRightOf="@id/start_button_Schedule"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:textSize="13dp"
+            android:textAlignment="center"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Friends"
-        android:id="@+id/add_friends"
-        android:layout_alignBottom="@+id/add_apps_button"
-        android:layout_toRightOf="@+id/add_apps_button"
-        android:layout_marginLeft="20dp"
-         />
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_below="@id/StartTime_ScheduleBased"
+        android:id="@+id/EndTime_ScheduleBased">
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="End Time"
+            android:id="@+id/EndTimeView_schedule"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:textSize="16dp"
+            android:textColor="#222"
+            android:paddingBottom="4dp"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/end_button_Schedule"
+            android:src="@drawable/ic_alarm_add_black_48dp"
+            android:layout_toEndOf="@id/EndTimeView_schedule"
+            android:layout_alignBottom="@id/EndTimeView_schedule"
+            android:layout_marginLeft= "10dp"
+            android:paddingBottom="4dp"
+            android:onClick="setEndTime"
+            />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            android:ems="10"
+            android:id="@+id/end_time_edit_text_Schedule"
+            android:layout_alignBottom="@id/end_button_Schedule"
+            android:layout_toRightOf="@id/end_button_Schedule"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:textSize="13dp"
+            android:textAlignment="center"/>
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Friends"
-        android:id="@+id/activity_schedule_based_task_add_friends_button"
-        android:onClick="addFriendsButton"
-        android:layout_alignBottom="@+id/add_friends"
-        android:layout_toRightOf="@+id/add_friends"
-        android:layout_marginLeft="10dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start Time"
-        android:id="@+id/start_time"
-        android:layout_below="@+id/add_apps"
-        android:layout_marginTop="50dp"
-
-         />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/start_button"
-        android:onClick="setStartTime"
-        android:src="@drawable/ic_alarm_add_black_48dp"
-        android:layout_alignBottom="@+id/start_time"
-        android:layout_toEndOf="@+id/start_time"
-        android:layout_marginLeft="10dp"/>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/end_button"
-        android:onClick="setEndTime"
-        android:src="@drawable/ic_alarm_add_black_48dp"
-        android:layout_alignBottom="@+id/end_time"
-        android:layout_toEndOf="@+id/end_time"
-        android:layout_marginLeft="10dp"
-         />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="End Time"
-        android:id="@+id/end_time"
-        android:layout_toEndOf="@+id/start_button"
-        android:layout_alignBottom="@+id/start_button"
-        android:layout_marginLeft="20dp"/>
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/start_time_edit_text"
-        android:layout_below="@+id/start_button"
-        android:layout_alignStart="@+id/start_button"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/end_time_edit_text"
-        android:layout_below="@+id/end_button"
-        android:layout_alignStart="@+id/end_button"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/date"
-        android:layout_alignBottom="@+id/changeDate"
-        android:layout_toRightOf="@+id/changeDate"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false" />
-
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/changeDate"
-        android:src="@drawable/ic_date_range_black_48dp"
-        android:onClick="setDate"
-        android:layout_toEndOf="@+id/enddateview"
-        android:layout_alignBottom="@+id/enddateview"
-        android:layout_marginLeft= "10dp"
-         />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/save"
-        android:src="@drawable/ic_check_circle_black_48dp"
-        android:layout_alignParentBottom="true"
-        android:onClick="onSave"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_type_logo"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/ic_date_range_black_48dp"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Schedule Based Tasks"
-        android:id="@+id/activity_type_description"
-        android:layout_alignBottom="@+id/activity_type_logo"
-        android:layout_toEndOf="@+id/activity_type_logo" />
-
+    </RelativeLayout>
 </RelativeLayout>
