Fix for https://github.com/Udayan12167/fekc/issues/1

--- a/App/FEKC/app/src/main/res/layout/activity_app_list.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_app_list.xml
@@ -48,4 +48,11 @@
         android:layout_below="@id/app_list_activity_linear_layout"
         android:layout_centerInParent="true" />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/activity_app_list_progressBar"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
