--- a/App/FEKC/app/src/main/res/layout/user_list_row.xml
+++ b/App/FEKC/app/src/main/res/layout/user_list_row.xml
@@ -5,6 +5,10 @@
     android:layout_height="match_parent"
     >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -58,5 +62,13 @@
         </LinearLayout>
 
     </LinearLayout>
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_list_row_progress_bar"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
 
 </RelativeLayout>
