--- a/App/FEKC/app/src/main/res/layout/activity_time_based_task_review.xml
+++ b/App/FEKC/app/src/main/res/layout/activity_time_based_task_review.xml
@@ -12,8 +12,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,24 +39,24 @@
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp">
+            android:layout_marginBottom="5dp"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Task Name"
+                android:layout_marginBottom="5dp"
                 android:layout_marginTop="20dp"
-                android:textSize="20sp"
+                android:text="Task Name"
                 android:textColor="#222"
-                android:layout_marginBottom="5dp"/>
+                android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/activity_duration_based_task_task_name_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/activity_duration_based_task_task_name_text_view"
                 android:textSize="15sp" />
 
         </LinearLayout>
@@ -64,111 +64,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="5dp">
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:gravity="left"
                 android:text="End Date"
-                android:textSize="20sp"
-                android:gravity="left"
-                android:textColor="#222" />
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_date_range"
-                android:paddingBottom="4dp"
-                android:layout_gravity="center"
-                />
-
-            <TextView
-                android:layout_gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:id="@+id/activity_duration_based_task_end_date_text_view"
-                android:clickable="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:textSize="15sp"
-                android:textAlignment="center"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:text="Apps"
-                android:textSize="20sp"
-                android:gravity="left"
-                android:textColor="#222" />
-
-            <view
-                android:id="@+id/activity_duration_based_task_review_app_recycler_view"
-                class="android.support.v7.widget.RecyclerView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:text="Friends"
-                android:textSize="20sp"
-                android:gravity="left"
-                android:textColor="#222" />
-
-            <view
-                android:id="@+id/activity_duration_based_task_review_user_recycler_view"
-                class="android.support.v7.widget.RecyclerView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="5dp">
-
-            <TextView
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="left"
-                android:text="Duration"
                 android:textColor="#222"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_alarm_add_black_48dp" />
+                android:paddingBottom="4dp"
+                android:src="@drawable/ic_date_range" />
 
             <TextView
-                android:id="@+id/activity_duration_based_task_duration_text_view"
-                android:layout_gravity="center"
+                android:id="@+id/activity_duration_based_task_end_date_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:clickable="false"
                 android:ems="10"
                 android:focusable="false"
@@ -178,6 +97,103 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:gravity="left"
+                android:text="Apps"
+                android:textColor="#222"
+                android:textSize="20sp" />
+
+            <view
+                android:id="@+id/activity_duration_based_task_review_app_recycler_view"
+                class="android.support.v7.widget.RecyclerView"
+                android:layout_width="wrap_content"
+                android:layout_height="98dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:gravity="left"
+                android:text="Friends"
+                android:textColor="#222"
+                android:textSize="20sp" />
+
+            <view
+                android:id="@+id/activity_duration_based_task_review_user_recycler_view"
+                class="android.support.v7.widget.RecyclerView"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="left"
+                android:text="Duration"
+                android:textColor="#222"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_alarm_add_black_48dp" />
+
+            <TextView
+                android:id="@+id/activity_duration_based_task_duration_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:ems="10"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:textAlignment="center"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/activity_duration_based_task_upload_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="Create task" />
+
+            <ProgressBar
+                android:id="@+id/activity_duration_based_task_progress_bar"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
+        </RelativeLayout>
     </LinearLayout>
 
 </RelativeLayout>
