--- a/App/FEKC/app/src/main/res/layout/warning_message_row.xml
+++ b/App/FEKC/app/src/main/res/layout/warning_message_row.xml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/user_shiv"
-    android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:background="@drawable/layout_border"
-    android:paddingTop="20dp">
+    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:orientation="horizontal"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/warning_message_row_image_view"
-        android:layout_width="120dp"
-        android:layout_height="90dp"
-        android:paddingLeft="20dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:src="@drawable/test_user2" />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/warning_message_row_image_view"
-        android:layout_toRightOf="@id/warning_message_row_image_view"
-        android:paddingLeft="10dp">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
         <TextView
             android:id="@+id/warning_message_row_name_text_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:gravity="left"
+            android:layout_weight="1"
             android:text="Shiv Kandikuppa"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/warning_message_row_message_text_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/warning_message_row_name_text_view"
-            android:paddingTop="10dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="left"
             android:text="Hey! You got to stop using this app!"
-            android:textSize="15dp" />
-    </RelativeLayout>
-</RelativeLayout>
+            android:layout_gravity="center"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+</LinearLayout>
